[tool.poetry]
name = "mujoco-maze"
version = "0.1.0"
description = "Simple maze environments using mujoco-py"
license = "Apache-2.0"
authors = ["Yuji Kanagawa <yuji.kngw.80s.revive@gmail.com>"]
readme = "README.md"  # Markdown files are supported

repository = "https://github.com/kngwyu/mujoco-maze"
homepage = "https://github.com/kngwyu/mujoco-maze"

[tool.poetry.dependencies]
python = "^3.5"  # Compatible python versions must be declared here
gym = ">=0.14"
mujoco-py = ">=2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"


[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''