[metadata]
name = mujoco_maze
version = attr: mujoco_maze.__version__
url = https://github.com/kngwyu/mujoco_maze
license = Apache2
license_files = LICENSE
author = Yuji Kanagawa
author_email = yuji.kanagawa@oist.jp
description = Simple maze environments with mujoco
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
install_requires =
    gym
    mujoco

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::UserWarning

[flake8]
max-line-length = 88
ignore = W391, W503, F821, E203, E231

[mypy]
python_version = 3.6
ignore_missing_imports = True
warn_unused_configs = True

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88
lines_between_types=0
combine_as_imports=True
known_first_party=mujoco_maze, tests
